# Pico-radio

./: CMakeLists.txt  README.md  fm_example.cpp  usb_descriptors.c
3D Prints/: Battery-Holder.stl  Main body.stl
eagle/: Pico radio.brd  Pico radio.sch
pico_analog_microphone/: CMakeLists.txt  analog_microphone.c
pico_analog_microphone/include/: analog_microphone.h
